# ScholarScout

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  config.yaml  package-lock.json  package.json  preview_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  evidence-pack.md  faq.md  getting-started.md  modes.md  notification.m4a  providers.md  skills.md
skills/: README.md
skills/AI_TOOL/: SKILL.md
skills/GRANT_PROPOSAL/: SKILL.md
skills/HACKATHON/: SKILL.md
skills/INDUSTRY_RND/: SKILL.md
skills/SIDE_PROJECT/: SKILL.md
skills/THESIS/: SKILL.md
src/core/: __init__.py  analysis_utils.py  llm.py  (+16 more)
tests/: __init__.py  conftest.py  test_analysis_utils.py  test_capability_route_structure.py  test_capability_ui_structure.py  test_clusterer.py  test_deep_dive_implementation.py  test_deepdive_ui_structure.py  test_evidence.py  test_evidence_ui_structure.py  test_export_all_ui_structure.py  test_gap_synthesis.py  test_gap_synthesis_edge_cases.py  test_generator_evidence.py  test_goal_style.py  test_impl_finder.py  test_language_injection_verification.py  test_language_select_verification.py  test_llm_ping_hints.py  test_novelty_checker.py  test_novelty_checker_properties.py  test_personalization.py  test_roadmap_impl_ui_structure.py  test_session_compat.py  test_sse_parser.py  test_synthesizer.py  test_task_7_2_verification.py  test_updater.py  test_version_consistency.py  test_workspace_ui_structure.py
(+43 files in other folders)
